# ray-dashboard-sdk

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  docker-compose.yaml  rustfmt.toml
.github/workflows/: ci.yml  publish.yml
examples/: axum.rs  simple.rs
examples/axum/: Cargo.toml
openapi/: jobs.json
src/: constants.rs  error.rs  jobs.rs  lib.rs
src/client/: jobs.rs  mod.rs  packages.rs
src/clients/: jobs.rs  mod.rs
src/schemas/: common.rs  env.rs  jobs.rs  mod.rs
src/utils/: mod.rs  packaging.rs
tests/: client.rs  common.rs  jobs.rs  packages.rs  setup.rs
tests/_resources/: .gitignore  script.py
tests/common/: mod.rs
