[package]
name = "ray-dashboard-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-timer = "3.0.3"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"
url = "2.5.7"

[dev-dependencies]
once_cell = "1.21.3"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
