[package]
name = "ray-dashboard-sdk"
version = "0.1.3"
edition = "2024"
description = "A simple Rust client for the Ray Dashboard REST API."
keywords = ["rust", "ray", "dashboard", "sdk", "client"]
authors = ["Sean Friedowitz <sfriedowitz93@gmail.com>"]
repository = "https://github.com/sfriedowitz/ray-dashboard-sdk"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
futures-timer = "3.0.3"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"
url = "2.5.7"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
