[package]
name = "ray-dashboard-sdk"
version = "0.3.0"
edition = "2024"
description = "A simple Rust client for the Ray Dashboard REST API."
keywords = ["rust", "ray", "dashboard", "sdk", "client"]
authors = ["Sean Friedowitz <sfriedowitz93@gmail.com>"]
repository = "https://github.com/sfriedowitz/ray-dashboard-sdk"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
async-trait = "0.1.89"
futures-timer = "3.0.3"
ignore = "0.4.23"
reqwest = { version = "0.12.24", features = ["json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
tempfile = "3.17"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util"] }
tracing = "0.1.41"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2.5.0"
zip = { version = "2.2.3", default-features = false, features = ["deflate"] }

[dev-dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3"
